--- a/templates/index.html
+++ b/templates/index.html
@@ -38,8 +38,8 @@
 
         /* 버튼 스타일 추가 */
         button {
-            background-color: red; /* 초록색 배경 */
-            color: black; /* 흰색 글자 */
+            background-color: #321D87;
+            color: white; 
             font-weight: 600;
             border: none; /* 테두리 없음 */
             padding: 5px 5px; /* 상하 10px, 좌우 20px 패딩 */
@@ -55,7 +55,7 @@
 
         /* 버튼 호버 효과 */
         button:hover {
-            background-color: #45a049; /* 호버 시 배경색 변경 */
+            background-color: #321D87; /* 호버 시 배경색 변경 */
         }
     </style>
 </head>
